--- a/opomniki/opomniki.html
+++ b/opomniki/opomniki.html
@@ -21,6 +21,8 @@
 <!-- GLAVA -->
 <glava>
 Pozdravljeni, <span id="uporabnik"></span>!
+<link rel="stylesheet" type="text/css" href="stili.css">
+<script src="skripta.js"></script>
 </glava>
 
 <!-- TELO -->
